# infogroove

./: PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: MAIN_IDEA.md
examples/arc-circles/: arc-circles.igd  def.json
examples/blue-parallelograms/: blue-parallelograms.igd  def.json
examples/horizontal-bars/: def.json  horizontal-bars.igd
examples/key-messages/: def.json
examples/staggered-keywords/: def.json  staggered-keywords.igd
examples/stat-cards/: def.json  stat-cards.igd
infogroove/: __init__.py  cli.py  core.py  formula.py  loader.py  models.py  renderer.py  template_loader.py  utils.py
skills/: create-infogroove.skill
skills/create-infogroove/: SKILL.md
skills/create-infogroove/references/: infogroove-template-guide.md
tests/: test_cli.py  test_formula.py  test_package_init.py  test_renderer.py  test_template_loader.py  test_utils.py
